@@ -1,5 +1,9 @@
- * Fixed a bug which caused problems with connecting to Cassandra under heavy load (#185)
- * Skip $_outer constructor param in ReflectionColumnMapper, fixes working with case classes in Spark shell, added apropriate test cases (#188)
+ * Add toMap and nameOf methods to CassandraRow.
+   Reduce size of serialized CassandraRow. (#194)
+ * Fixed a bug which caused problems with connecting to Cassandra under
+   heavy load (#185)
+ * Skip $_outer constructor param in ReflectionColumnMapper, fixes working with
+   case classes in Spark shell, added apropriate test cases (#188)
 
 1.0.0 RC 4
  * Upgrade Java driver for Cassandra to 2.0.4. (#171)
